--- a/style.css
+++ b/style.css
@@ -8,19 +8,28 @@ header {
   align-items: center;
   justify-content: space-around;
 }
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100%;
+}
 
 .container-logo {
   margin: 2rem;
+}
+.tag-container {
+  text-align: center;
 }
 
 .tag {
   background: transparent;
   border-radius: 1rem;
   border: 0.5px solid #c4c4c4;
-  padding: 0.5rem;
-  margin: 0 0.2rem;
+  padding: 0.3rem;
+  margin: 0 0.005rem;
   color: #911c1c;
-  font-size: 0.7rem;
+  font-size: 0.6rem;
 }
 .main-title {
   font-size: 2.1rem;
@@ -28,23 +37,32 @@ header {
   display: flex;
   margin: 0 1rem;
   color: #901c1c;
+  white-space: nowrap;
 }
 
 /* photograph section */
 
-.photograph {
-  width: 16rem;
-  height: 21rem;
-  border: 4px black solid;
+.photograph-container {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-around;
+}
+.photograph {
+  width: 19rem;
+  height: 21rem;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 2rem;
 }
 
 .photograph-link {
   width: 100%;
-  height: 70%;
+  height: 80%;
   overflow: hidden;
-  border: 3px green solid;
+
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -54,8 +72,8 @@ header {
 }
 
 .photograph-img {
-  width: 9rem;
-  height: 9rem;
+  width: 12.5rem;
+  height: 12.5rem;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -63,5 +81,74 @@ header {
 .photograph-name {
   margin: 0;
   font-weight: lighter;
-  font-size: 1.6rem;
+  font-size: 2rem;
+}
+
+.information-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 20%;
+}
+
+.city,
+.price,
+.tagline {
+  margin: 0;
+  font-weight: lighter;
+}
+
+.city {
+  font-size: 1rem;
+  color: #901c1c;
+}
+
+.tagline {
+  font-size: 0.7rem;
+}
+
+.price {
+  font-size: 0.6rem;
+  color: #757575;
+}
+
+@media screen and (max-width: 860px) {
+  header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .container-logo {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin: 0;
+    text-align: center;
+    margin: 1rem;
+  }
+
+  .tag-container {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    margin: 1rem;
+  }
+  .main-title {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    /* font-size: 1rem; */
+    margin: 0;
+    text-align: center;
+    display: block;
+    margin: 1rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .main-title {
+    font-size: 1rem;
+  }
+  .logo {
+    height: 2rem;
+    width: auto;
+  }
 }
