--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  position: relative;
+}
+
 body {
   font-family: "DM Sans", sans-serif;
 }
@@ -344,4 +348,16 @@ body {
     font-size: 0.7rem;
     margin: 0.3rem;
   }
+}
+
+/* lightbox */
+
+/* modal */
+
+.bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(196, 196, 196, 0.4);
+  position: absolute;
+  top: 0;
 }
