--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ body {
 .image,
 .video {
   overflow: hidden;
-  min-width: 100%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 0.3rem;
