--- a/style.css
+++ b/style.css
@@ -379,14 +379,14 @@ body {
   height: 50vh; */
 }
 
-.main-img {
-  width: 80%;
+.main-img,
+#lightbox-video {
+  max-width: 100%;
   height: 70%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
-
   object-fit: cover;
   cursor: zoom-out;
 }
@@ -419,7 +419,7 @@ body {
 .image-name {
   position: absolute;
   bottom: 7%;
-  left: 10%;
+  left: 20%;
   color: #901c1c;
   border: none;
   background: white;
